WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112707
[BlackBerry] When selecting an object, assign focus to new node instead of clearing previous focused node
https://bugs.webkit.org/show_bug.cgi?id=112707
Summary
[BlackBerry] When selecting an object, assign focus to new node instead of cl...
Andy Chen
Reported
2013-03-19 09:30:30 PDT
Currently we clear focus if the select point is not inside the input field, then set focus to the new node when selectionChanged is called. This would cause unexpected behaviour for client.
Attachments
Patch
(3.83 KB, patch)
2013-03-19 09:41 PDT
,
Andy Chen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Chen
Comment 1
2013-03-19 09:41:05 PDT
Created
attachment 193844
[details]
Patch
Mike Fenton
Comment 2
2013-03-19 09:54:59 PDT
Looks good to me.
Rob Buis
Comment 3
2013-03-19 10:57:12 PDT
Comment on
attachment 193844
[details]
Patch LGTM.
WebKit Review Bot
Comment 4
2013-03-19 11:33:27 PDT
Comment on
attachment 193844
[details]
Patch Clearing flags on attachment: 193844 Committed
r146226
: <
http://trac.webkit.org/changeset/146226
>
WebKit Review Bot
Comment 5
2013-03-19 11:33:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug